fixed task in lecture 2