@@ -1,13 +1,11 @@
 package com.es.phoneshop.model.product;
 
 import com.es.phoneshop.exception.ProductNotFoundException;
-import org.junit.Before;
 import org.junit.Test;
 
 import java.math.BigDecimal;
-import java.util.Comparator;
-import java.util.Currency;
-import java.util.List;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import static org.junit.Assert.*;
 
@@ -15,12 +13,19 @@ public class ArrayListProductDaoTest {
     private ProductDao productDao;
     private Product productToSave;
     private Currency usd = Currency.getInstance("USD");
+    private List<Product> sampleProducts;
 
-    @Before
-    public void setup() {
+    public ArrayListProductDaoTest() {
         productDao = ArrayListProductDao.INSTANCE;
         productToSave = new Product("test", "test", new BigDecimal(150), usd, 40, "https://raw.githubusercontent.com/andrewosipenko/phoneshop-ext-images/master/manufacturer/Siemens/Siemens%20SXG75.jpg");
-        init();
+        sampleProducts = new ArrayList<>();
+
+        sampleProducts.add(new Product("slls", "new", new BigDecimal(70), usd, 5, "https://raw.githubusercontent.com/andrewosipenko/phoneshop-ext-images/master/manufacturer/Siemens/Siemens%20SXG75.jpg"));
+        sampleProducts.add(new Product("mxmv", "kdk", new BigDecimal(60), usd, -3, "https://raw.githubusercontent.com/andrewosipenko/phoneshop-ext-images/master/manufacturer/Siemens/Siemens%20SXG75.jpg"));
+        sampleProducts.add(new Product("oddl", "oowow", new BigDecimal(120), usd, 7, "https://raw.githubusercontent.com/andrewosipenko/phoneshop-ext-images/master/manufacturer/Siemens/Siemens%20SXG75.jpg"));
+        sampleProducts.add(new Product("oeppe", "kkel", new BigDecimal(40), usd, 9, "https://raw.githubusercontent.com/andrewosipenko/phoneshop-ext-images/master/manufacturer/Siemens/Siemens%20SXG75.jpg"));
+
+        setSampleProductsInDao();
     }
 
     @Test(expected = ProductNotFoundException.class)
@@ -30,7 +35,8 @@ public class ArrayListProductDaoTest {
 
     @Test
     public void whenFindProductByCorrectIdThenReturnProduct() {
-        assertNotNull(productDao.getProduct(1L));
+        Product result = productDao.getProduct(1L);
+        assertNotNull(result);
     }
 
     @Test
@@ -59,129 +65,104 @@ public class ArrayListProductDaoTest {
         assertNotNull(productToSave.getId());
     }
 
-    @Test(expected = RuntimeException.class)
+    @Test(expected = ProductNotFoundException.class)
     public void whenDeleteProductThenShouldThrowExceptionAfterGettingOfDeletedProduct() {
         productDao.delete(1L);
         productDao.getProduct(1L);
     }
 
-    @Test(expected = RuntimeException.class)
+    @Test(expected = ProductNotFoundException.class)
     public void whenDeleteProductWithIncorrectIdThenShouldThrowException() {
         productDao.delete(0L);
     }
 
     @Test
-    public void whenProductToSaveHasNotNullExistedIdThenShouldUpdate(){
-        Product updatedProduct = new Product(1L,"slls", "new", new BigDecimal(100), usd, 5, "https://raw.githubusercontent.com/andrewosipenko/phoneshop-ext-images/master/manufacturer/Siemens/Siemens%20SXG75.jpg");
+    public void whenProductToSaveHasNotNullExistedIdThenShouldUpdate() {
+        Product updatedProduct = new Product(1L, "slls", "new", new BigDecimal(100), usd, 5, "https://raw.githubusercontent.com/andrewosipenko/phoneshop-ext-images/master/manufacturer/Siemens/Siemens%20SXG75.jpg");
         productDao.save(updatedProduct);
         assertEquals(productDao.getProduct(1L), updatedProduct);
     }
 
     @Test
-    public void whenFindProductsByQueryThenShouldReturnCorrectList(){
-        for(Product product: productDao.findProductsByNameAndSort("o", null, null)){
+    public void whenFindProductsByQueryThenShouldReturnCorrectList() {
+        for (Product product : productDao.findProductsByNameAndSort("o", null, null)) {
             assertTrue(product.getDescription().contains("o"));
         }
     }
 
     @Test
-    public void whenFindProductsByAscPriceThenShouldReturnCorrectList(){
-        List<Product> sortedList = productDao.findProductsByNameAndSort(null, null, null)
-                .stream()
+    public void whenFindProductsByAscPriceThenShouldReturnCorrectList() {
+        List<Product> expected = getFilteredList(getAscPriceSortedList());
+        List<Product> result = productDao.findProductsByNameAndSort(null, SortField.price, SortOrder.asc);
+        assertEquals(result, expected);
+    }
+
+    @Test
+    public void whenFindProductsByDescPriceThenShouldReturnCorrectList() {
+        List<Product> expected = getFilteredList(getAscPriceSortedList());
+        Collections.reverse(expected);
+        List<Product> result = productDao.findProductsByNameAndSort(null, SortField.price, SortOrder.desc);
+        assertEquals(result, expected);
+    }
+
+    @Test
+    public void whenFindProductsByPriceWithoutSortingThenShouldReturnCorrectList() {
+        List<Product> expected = getFilteredList(sampleProducts);
+        List<Product> result = productDao.findProductsByNameAndSort(null, SortField.price, null);
+        assertEquals(result, expected);
+    }
+
+    @Test
+    public void whenFindProductsWithoutFieldButWithSortingThenShouldReturnCorrectList() {
+        List<Product> expected = getFilteredList(sampleProducts);
+        List<Product> result = productDao.findProductsByNameAndSort(null, null, SortOrder.desc);
+        assertEquals(result, expected);
+    }
+
+    @Test
+    public void whenFindProductsByAscDescriptionThenShouldReturnCorrectList() {
+        List<Product> expected = getFilteredList(getAscDescriptionSortedList());
+        List<Product> result = productDao.findProductsByNameAndSort(null, SortField.description, SortOrder.asc);
+        assertEquals(result, expected);
+    }
+
+    @Test
+    public void whenFindProductsByDescDescriptionThenShouldReturnCorrectList() {
+        List<Product> expected = getFilteredList(getAscDescriptionSortedList());
+        Collections.reverse(expected);
+        List<Product> result = productDao.findProductsByNameAndSort(null, SortField.description, SortOrder.desc);
+        assertEquals(result, expected);
+    }
+
+    private void setSampleProductsInDao() {
+        for (Product product : sampleProducts) {
+            productDao.save(product);
+        }
+    }
+
+    private List<Product> getAscPriceSortedList() {
+        return sampleProducts.stream()
                 .sorted(new Comparator<Product>() {
                     @Override
                     public int compare(Product o1, Product o2) {
                         return o1.getPrice().compareTo(o2.getPrice());
                     }
                 }).toList();
-        assertEquals(productDao.findProductsByNameAndSort(null, SortField.price, SortOrder.asc), sortedList);
     }
 
-    @Test
-    public void whenFindProductsByDescPriceThenShouldReturnCorrectList() {
-        List<Product> sortedList = productDao.findProductsByNameAndSort(null, null, null)
-                .stream()
-                .sorted(new Comparator<Product>() {
-                    @Override
-                    public int compare(Product o1, Product o2) {
-                        return o2.getPrice().compareTo(o1.getPrice());
-                    }
-                }).toList();
-        assertEquals(productDao.findProductsByNameAndSort(null, SortField.price, SortOrder.desc), sortedList);
-    }
-
-    @Test
-    public void whenFindProductsByPriceWithoutSortingThenShouldReturnCorrectList() {
-        List<Product> sortedList = productDao.findProductsByNameAndSort(null, null, null)
-                .stream()
-                .sorted(new Comparator<Product>() {
-                    @Override
-                    public int compare(Product o1, Product o2) {
-                        return 0;
-                    }
-                }).toList();
-        assertEquals(productDao.findProductsByNameAndSort(null, SortField.price, SortOrder.without), sortedList);
-
-    }
-
-    @Test
-    public void whenFindProductsWithoutFieldButWithSortingThenShouldReturnCorrectList() {
-        List<Product> sortedList = productDao.findProductsByNameAndSort(null, null, null)
-                .stream()
-                .sorted(new Comparator<Product>() {
-                    @Override
-                    public int compare(Product o1, Product o2) {
-                        return 0;
-                    }
-                }).toList();
-        assertEquals(productDao.findProductsByNameAndSort(null, SortField.without, SortOrder.desc), sortedList);
-    }
-
-    @Test
-    public void whenFindProductsWithoutFieldAndSortingThenShouldReturnCorrectList() {
-        List<Product> sortedList = productDao.findProductsByNameAndSort(null, null, null)
-                .stream()
-                .sorted(new Comparator<Product>() {
-                    @Override
-                    public int compare(Product o1, Product o2) {
-                        return 0;
-                    }
-                }).toList();
-        assertEquals(productDao.findProductsByNameAndSort(null, SortField.without, SortOrder.without), sortedList);
-    }
-
-    @Test
-    public void whenFindProductsByAscDescriptionThenShouldReturnCorrectList() {
-        List<Product> sortedList = productDao.findProductsByNameAndSort(null, null, null)
-                .stream()
+    private List<Product> getAscDescriptionSortedList() {
+        return sampleProducts.stream()
                 .sorted(new Comparator<Product>() {
                     @Override
                     public int compare(Product o1, Product o2) {
                         return o1.getDescription().compareTo(o2.getDescription());
                     }
                 }).toList();
-        assertEquals(productDao.findProductsByNameAndSort(null, SortField.description, SortOrder.asc), sortedList);
     }
 
-    @Test
-    public void whenFindProductsByDescDescriptionThenShouldReturnCorrectList() {
-        List<Product> sortedList = productDao.findProductsByNameAndSort(null, null, null)
-                .stream()
-                .sorted(new Comparator<Product>() {
-                    @Override
-                    public int compare(Product o1, Product o2) {
-                        return o2.getDescription().compareTo(o1.getDescription());
-                    }
-                }).toList();
-        assertEquals(productDao.findProductsByNameAndSort(null, SortField.description, SortOrder.desc), sortedList);
+    private List<Product> getFilteredList(List<Product> products) {
+        return products.stream()
+                .filter(product -> product.getPrice() != null && product.getStock() > 0)
+                .collect(Collectors.toList());
     }
-
-        private void init(){
-        productDao.save(new Product("slls", "new", new BigDecimal(100), usd, 5, "https://raw.githubusercontent.com/andrewosipenko/phoneshop-ext-images/master/manufacturer/Siemens/Siemens%20SXG75.jpg"));
-        productDao.save(new Product("mxmv", "kdk", new BigDecimal(100), usd, -3, "https://raw.githubusercontent.com/andrewosipenko/phoneshop-ext-images/master/manufacturer/Siemens/Siemens%20SXG75.jpg"));
-        productDao.save(new Product("oddl", "oowow", new BigDecimal(100), usd, 7, "https://raw.githubusercontent.com/andrewosipenko/phoneshop-ext-images/master/manufacturer/Siemens/Siemens%20SXG75.jpg"));
-        productDao.save(new Product("oeppe", "kkel", new BigDecimal(100), usd, 9, "https://raw.githubusercontent.com/andrewosipenko/phoneshop-ext-images/master/manufacturer/Siemens/Siemens%20SXG75.jpg"));
-    }
-
-
 }
